fix: close the 0.7.0 pre-release hardening, smoke, and audit findings
Fold the post-roadmap hardening review, the live-smoke follow-ups, and the
final release audit into one pre-release round while keeping the update
registry pinned to the published 0.6.1 asset.

- Fail closed on reasoner errors, exact bounded inputs, snapshot drift,
  network and lock violations, unsafe report paths, and unverifiable
  baseline evidence; keep arbitrary-pair impact analysis independent of the
  active ontology and disclose incomplete baseline imports in release
  evidence; parse manifest-backed diffs from the exact verified bytes.
- Bind fork-safe CI artifacts to authenticated runs and open PR heads
  without relying on workflow_run pull request metadata.
- Resolve every reasoner reference (policy reasoning.reasoner, set_reasoner,
  semantic_diff reasoner=, run_project_qc's pre-gate and snapshot
  comparison) with one shared rule: a version-less name — the recommended
  convention used by the shipped examples and the starter template — must
  match exactly one installed reasoner (zero matches stays
  reasoner_unavailable, several become the new reasoner_ambiguous), while a
  full display name or factory id pins its exact match; list_reasoners
  preserves every installed factory, including duplicate display names, and
  retains ids in ambiguity diagnostics.
- Let save_ontology create the policy-referenced root_artifact while the
  discovered policy is still invalid via an explicit policy_bootstrap
  request, authorized like the documented import-lock bootstrap
  (capability-checked, confined to the canonical project_root, no
  policy-granted widening) and recorded in the result; the fail-closed
  refusal names the flag and the template validation_hint points at it.
- CLI: shade slf4j-nop for a clean stderr, add --help/-h/help (usage on
  stdout, exit 0), report policy_loaded=false for never-evaluated policies
  in the JSON and markdown reports alike, and newline-terminate JSON output